// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventForm /> rendering renders correctly with data 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
       Event Name: 
    </label>
    <input
      className="form__element form__input"
      id="eventNameInput"
      onChange={[Function]}
      placeholder="Give Your Event A Good Name"
      type="text"
      value="Cool Event Title"
    />
    <label>
       Event Date: 
    </label>
    <withStyles(SingleDatePicker)
      anchorDirection="left"
      appendToBody={false}
      block={false}
      calendarInfoPosition="bottom"
      customCloseIcon={null}
      customInputIcon={null}
      date={345600000}
      daySize={39}
      disableScroll={false}
      disabled={false}
      displayFormat={[Function]}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      id="datePicker"
      initialVisibleMonth={null}
      inputIconPosition="before"
      isDayBlocked={[Function]}
      isDayHighlighted={[Function]}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      monthFormat="MMMM YYYY"
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onClose={[Function]}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      onNextMonthClick={[Function]}
      onPrevMonthClick={[Function]}
      openDirection="down"
      orientation="horizontal"
      phrases={
        Object {
          "calendarLabel": "Calendar",
          "chooseAvailableDate": [Function],
          "clearDate": "Clear Date",
          "closeDatePicker": "Close",
          "dateIsSelected": [Function],
          "dateIsUnavailable": [Function],
          "enterKey": "Enter key",
          "escape": "Escape key",
          "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
          "homeEnd": "Home and end keys",
          "jumpToNextMonth": "Move forward to switch to the next month.",
          "jumpToPrevMonth": "Move backward to switch to the previous month.",
          "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardShortcuts": "Keyboard Shortcuts",
          "leftArrowRightArrow": "Right and left arrow keys",
          "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
          "moveFocusByOneMonth": "Switch months.",
          "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
          "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
          "openThisPanel": "Open this panel.",
          "pageUpPageDown": "page up and page down keys",
          "questionMark": "Question mark",
          "returnFocusToInput": "Return to the date input field.",
          "selectFocusedDate": "Select the date in focus.",
          "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
          "upArrowDownArrow": "up and down arrow keys",
        }
      }
      placeholder="Date"
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      verticalSpacing={22}
      weekDayFormat="dd"
      withFullScreenPortal={false}
      withPortal={false}
    />
    <label>
      Time:
    </label>
    <input
      className="form__element form__input"
      id="timeInput"
      onChange={[Function]}
      type="time"
      value="02:13"
    />
    <label>
       Event Location: 
    </label>
    <input
      className="form__element form__input"
      id="locationInput"
      onChange={[Function]}
      placeholder="Give The Address Of Your Event"
      type="text"
      value="123 Elm St."
    />
    <label>
      Category:
    </label>
    <select
      className="form__element form__select"
      id="categoryInput"
      onChange={[Function]}
      value="sports"
    >
      <option
        disabled={true}
        selected={true}
        value=""
      >
        Select A Category
      </option>
      <option
        value="Sports"
      >
        Sports
      </option>
      <option
        value="Entertainment"
      >
        Entertainment
      </option>
      <option
        value="Food"
      >
        Food
      </option>
      <option
        value="Music"
      >
        Music
      </option>
      <option
        value="Miscellaneous"
      >
        Miscellaneous
      </option>
    </select>
    <label>
      Image URL:
    </label>
    <input
      className="form__element form__input"
      id="imageUrlInput"
      onChange={[Function]}
      placeholder="Give Your Event A Nice Image"
      type="text"
      value="https://image.com"
    />
    <label>
       Description: 
    </label>
    <textarea
      className="form__element form__textarea"
      id="descriptionInput"
      onChange={[Function]}
      placeholder="Describe Your Event"
      value="Lorem ipsum text"
    />
    <button
      className="button__purple"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<EventForm /> rendering renders the correct initial state 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
       Event Name: 
    </label>
    <input
      className="form__element form__input"
      id="eventNameInput"
      onChange={[Function]}
      placeholder="Give Your Event A Good Name"
      type="text"
      value=""
    />
    <label>
       Event Date: 
    </label>
    <withStyles(SingleDatePicker)
      anchorDirection="left"
      appendToBody={false}
      block={false}
      calendarInfoPosition="bottom"
      customCloseIcon={null}
      customInputIcon={null}
      date=""
      daySize={39}
      disableScroll={false}
      disabled={false}
      displayFormat={[Function]}
      enableOutsideDays={false}
      firstDayOfWeek={null}
      focused={false}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      id="datePicker"
      initialVisibleMonth={null}
      inputIconPosition="before"
      isDayBlocked={[Function]}
      isDayHighlighted={[Function]}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      monthFormat="MMMM YYYY"
      navNext={null}
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onClose={[Function]}
      onDateChange={[Function]}
      onFocusChange={[Function]}
      onNextMonthClick={[Function]}
      onPrevMonthClick={[Function]}
      openDirection="down"
      orientation="horizontal"
      phrases={
        Object {
          "calendarLabel": "Calendar",
          "chooseAvailableDate": [Function],
          "clearDate": "Clear Date",
          "closeDatePicker": "Close",
          "dateIsSelected": [Function],
          "dateIsUnavailable": [Function],
          "enterKey": "Enter key",
          "escape": "Escape key",
          "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
          "homeEnd": "Home and end keys",
          "jumpToNextMonth": "Move forward to switch to the next month.",
          "jumpToPrevMonth": "Move backward to switch to the previous month.",
          "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardShortcuts": "Keyboard Shortcuts",
          "leftArrowRightArrow": "Right and left arrow keys",
          "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
          "moveFocusByOneMonth": "Switch months.",
          "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
          "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
          "openThisPanel": "Open this panel.",
          "pageUpPageDown": "page up and page down keys",
          "questionMark": "Question mark",
          "returnFocusToInput": "Return to the date input field.",
          "selectFocusedDate": "Select the date in focus.",
          "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
          "upArrowDownArrow": "up and down arrow keys",
        }
      }
      placeholder="Date"
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonth={null}
      reopenPickerOnClearDate={false}
      required={false}
      screenReaderInputMessage=""
      showClearDate={false}
      showDefaultInputIcon={false}
      small={false}
      verticalHeight={null}
      verticalSpacing={22}
      weekDayFormat="dd"
      withFullScreenPortal={false}
      withPortal={false}
    />
    <label>
      Time:
    </label>
    <input
      className="form__element form__input"
      id="timeInput"
      onChange={[Function]}
      type="time"
      value=""
    />
    <label>
       Event Location: 
    </label>
    <input
      className="form__element form__input"
      id="locationInput"
      onChange={[Function]}
      placeholder="Give The Address Of Your Event"
      type="text"
      value=""
    />
    <label>
      Category:
    </label>
    <select
      className="form__element form__select"
      id="categoryInput"
      onChange={[Function]}
      value=""
    >
      <option
        disabled={true}
        selected={true}
        value=""
      >
        Select A Category
      </option>
      <option
        value="Sports"
      >
        Sports
      </option>
      <option
        value="Entertainment"
      >
        Entertainment
      </option>
      <option
        value="Food"
      >
        Food
      </option>
      <option
        value="Music"
      >
        Music
      </option>
      <option
        value="Miscellaneous"
      >
        Miscellaneous
      </option>
    </select>
    <label>
      Image URL:
    </label>
    <input
      className="form__element form__input"
      id="imageUrlInput"
      onChange={[Function]}
      placeholder="Give Your Event A Nice Image"
      type="text"
      value=""
    />
    <label>
       Description: 
    </label>
    <textarea
      className="form__element form__textarea"
      id="descriptionInput"
      onChange={[Function]}
      placeholder="Describe Your Event"
      value=""
    />
    <button
      className="button__purple"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
